Stop using the obsolete [driver = new AndroidDriver(new URL("http://localhost:4723"), caps);]